--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-icons": "^3.1.0",
     "react-scripts": "2.0.4",
+    "react-spinners": "^0.4.5",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
