--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-icons": "^3.1.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-spinners": "^0.4.5",
     "reactstrap": "^6.5.0"
