--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gh-pages": "^2.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.5.2",
     "react-icons": "^3.1.0",
     "react-router-dom": "^4.3.1",
